kubernetesdeploy/templates/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c -o kubernetesdeploy/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c -o kubernetesdeploy/
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/craftech-net: "true"
        io.kompose.service: backend
    spec:
      containers:
      - env:
        - name: DB_ENGINE
          value: '"postgresql"'
        - name: DB_HOST
          value: 127.0.0.1:5432
        - name: DB_NAME
          value: craftech
        - name: DB_PASS
          value: craftech
        - name: DB_PORT
          value: "5432"
        - name: DB_USER
          value: craftech
        - name: SECRET_KEY
          value: '''5vUCOVMkF2JNhH2CmzY4BnhDiiUtv+reNq2wwxbw31E='''
        image: backend
        imagePullPolicy: ""
        name: backend
        ports:
        - containerPort: 8000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
